[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/key_pair_input_font_15.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://buttons/display_vote_template.gd" type="Script" id=3]
[ext_resource path="res://fonts/key_pair_input_font_30.tres" type="DynamicFont" id=4]

[node name="display_vote_template" type="PanelContainer"]
margin_right = 360.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 110 )
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IndividualIssue" type="HBoxContainer" parent="."]
margin_right = 360.0
margin_bottom = 162.0
size_flags_vertical = 3
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="IndividualIssue"]
margin_right = 6.0
margin_bottom = 162.0
custom_constants/margin_left = 6

[node name="issue_title" type="Label" parent="IndividualIssue"]
margin_left = 7.0
margin_top = 53.0
margin_right = 241.0
margin_bottom = 108.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Add quadratic voting what if it"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="MarginContainer3" type="MarginContainer" parent="IndividualIssue"]
margin_left = 242.0
margin_right = 252.0
margin_bottom = 162.0
custom_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="IndividualIssue"]
margin_left = 253.0
margin_right = 353.0
margin_bottom = 162.0

[node name="MarginContainer" type="MarginContainer" parent="IndividualIssue/VBoxContainer"]
margin_right = 100.0
margin_bottom = 10.0
custom_constants/margin_top = 10

[node name="vote_button" type="Button" parent="IndividualIssue/VBoxContainer"]
margin_top = 14.0
margin_right = 100.0
margin_bottom = 104.0
rect_min_size = Vector2( 100, 90 )
size_flags_horizontal = 9
size_flags_vertical = 4
text = "VOTE!"

[node name="number_votes" type="Label" parent="IndividualIssue/VBoxContainer"]
margin_top = 108.0
margin_right = 100.0
margin_bottom = 162.0
custom_fonts/font = ExtResource( 4 )
text = "3"
align = 1
valign = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="IndividualIssue"]
margin_left = 354.0
margin_right = 360.0
margin_bottom = 162.0
custom_constants/margin_right = 6
[connection signal="pressed" from="IndividualIssue/VBoxContainer/vote_button" to="." method="_on_vote_button_pressed"]
